--- a/sorting_visualizer/src/index.css
+++ b/sorting_visualizer/src/index.css
@@ -12,11 +12,7 @@ code {
     monospace;
 }
 
-.array-container {
-  display: flex;
-}
-
-.array-bar {
+/* .array-bar {
   display: inline;
   width: 30%;
-}
+} */
